// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager Test error notification with top-left position 1`] = `
<div
  class="vuedl-notification left vuedl-notification-fade-enter vuedl-notification-fade-enter-active"
  role="alert"
  style="max-width: 500px; z-index: 2000; top: 10px;"
>
  <!---->
   
  <!---->
</div>
`;

exports[`manager Test info notification 1`] = `
<div
  class="vuedl-notification right vuedl-notification-fade-leave vuedl-notification-fade-leave-active"
  role="alert"
  style="max-width: 500px; z-index: 2000; top: 10px;"
>
  <!---->
   
  <!---->
</div>
`;

exports[`manager Test notification component 1`] = `
<div
  class="vuedl-notification right vuedl-notification-fade-enter vuedl-notification-fade-enter-active"
  role="alert"
  style="max-width: 500px; z-index: 2000; top: 10px;"
>
  <!---->
   
  <!---->
</div>
`;

exports[`manager Test success notification 1`] = `
<div
  class="vuedl-notification right vuedl-notification-fade-enter vuedl-notification-fade-enter-active"
  role="alert"
  style="max-width: 500px; z-index: 2000; top: 10px;"
>
  <!---->
   
  <!---->
</div>
`;

exports[`manager Test warning notification with bottom-right position 1`] = `
<div
  class="vuedl-notification right"
  role="alert"
  style="max-width: 500px; z-index: 2000; bottom: 10px;"
>
  <!---->
   
  <!---->
</div>
`;
